--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "maizuo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "babel-plugin-import": "^1.13.3",
+    "better-scroll": "^2.0.6",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
     "swiper": "^6.3.5",
+    "vant": "^2.11.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
